--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -280,7 +280,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    y = outcome\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
     "    gene_iid = _np.array(list(bed.iid))\n",
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if _np.all(beta_0==_np.ones(1)):        \n",
@@ -294,7 +294,7 @@
     "                _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "                _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "                _X -= _np.mean(_X)\n",
-    "                __[k] = _X@_y\n",
+    "                __[k] = _X@_y/N\n",
     "                k += 1\n",
     "            return __\n",
     "        # multiprocessing starts here\n",
@@ -370,7 +370,7 @@
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma, chunck_size=chunck_size)[1]\n",
