--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -258,7 +258,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    y = outcome\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
     "    gene_iid = _np.array(list(bed.iid))\n",
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if _np.all(beta_0==_np.ones(1)):\n",
@@ -269,7 +269,7 @@
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "            _X -= _np.mean(_X)\n",
-    "            _[j] = _X@_y\n",
+    "            _[j] = _X@_y/N\n",
     "        beta = _np.sign(_)\n",
     "        beta = _np.hstack((np.array([0]), beta))\n",
     "    else:\n",
@@ -338,7 +338,7 @@
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
