--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:39:52.084244Z",
-     "start_time": "2022-07-21T23:39:51.711327Z"
+     "end_time": "2022-07-22T16:47:54.224156Z",
+     "start_time": "2022-07-22T16:47:51.924046Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "C:\\Users\\alphaIto\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
       "  \"class\": algorithms.Blowfish,\n"
      ]
     }
@@ -60,8 +60,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:39:52.241366Z",
-     "start_time": "2022-07-21T23:39:52.085500Z"
+     "end_time": "2022-07-22T16:47:56.148636Z",
+     "start_time": "2022-07-22T16:47:54.226098Z"
     }
    },
    "outputs": [],
@@ -181,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:39:52.258622Z",
-     "start_time": "2022-07-21T23:39:52.242452Z"
+     "end_time": "2022-07-22T17:49:11.646066Z",
+     "start_time": "2022-07-22T17:49:11.606622Z"
     }
    },
    "outputs": [],
@@ -257,7 +257,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    y = outcome\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
     "    gene_iid = _np.array(list(bed.iid))\n",
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if _np.all(beta_0==_np.ones(1)):\n",
@@ -268,8 +268,8 @@
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "            _X -= _np.mean(_X)\n",
-    "            _[j] = _X@_y\n",
-    "        beta = _np.sign(_)\n",
+    "            _[j] = _X@_y/N\n",
+    "        beta = _#_np.sign(_)\n",
     "        beta = _np.hstack((np.array([0]), beta))\n",
     "    else:\n",
     "        beta = beta_0\n",
@@ -337,8 +337,26 @@
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    p = len(list(bed.sid))\n",
+    "    p = bed.sid_count\n",
+    "    \n",
+    "    y = outcome\n",
+    "    gene_iid = _np.array(list(bed.iid))\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
+    "    _ = _np.zeros(p)\n",
+    "    _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    _y -= _np.mean(_y)\n",
+    "    for j in SNP_ind:\n",
+    "        _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
+    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "        _X -= _np.mean(_X)\n",
+    "        _[j] = _X@_y/N\n",
+    "    beta = _#_np.sign(_)\n",
+    "    beta = _np.hstack((np.array([0]), beta)).reshape(1,-1)\n",
+    "    \n",
+    "        \n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
+    "    beta_mat = _np.repeat(beta, len(lambda_)+1, axis=0)\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -354,11 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:39:57.568355Z",
-     "start_time": "2022-07-21T23:39:52.260248Z"
+     "end_time": "2022-07-22T18:02:23.385900Z",
+     "start_time": "2022-07-22T18:02:00.741691Z"
     }
    },
    "outputs": [
@@ -366,67 +384,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L_convex is: 951.1723835414942\n",
-      "[[ 4.68810205e+00  2.78015194e+00  0.00000000e+00  3.29606170e+00\n",
+      "L_convex is: 9843.632966454592\n",
+      "[1. 0. 1. ... 2. 1. 1.]\n",
+      "[1. 2. 0. ... 0. 2. 1.]\n",
+      "[2. 1. 2. ... 2. 2. 2.]\n",
+      "(5000,)\n",
+      "[[ 6.07135686e-03  2.12695484e+01 -1.23849299e+01  1.30569540e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.69746444e+00  2.77748954e+00  0.00000000e+00  3.29608707e+00\n",
+      " [ 1.21354531e-02  2.12770734e+01 -1.23782941e+01  1.30624910e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.70680489e+00  2.77636314e+00  0.00000000e+00  3.29764527e+00\n",
+      " [ 1.81922393e-02  2.12847967e+01 -1.23718716e+01  1.30682265e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.71611455e+00  2.77676152e+00  0.00000000e+00  3.30072520e+00\n",
+      " [ 2.42416659e-02  2.12927184e+01 -1.23656625e+01  1.30741603e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.72538466e+00  2.77867357e+00  0.00000000e+00  3.30531587e+00\n",
+      " [ 3.02836837e-02  2.13008383e+01 -1.23596668e+01  1.30802924e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.73460652e+00  2.78208830e+00  0.00000000e+00  3.31140639e+00\n",
+      " [ 3.63182434e-02  2.13091563e+01 -1.23538847e+01  1.30866228e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.74377155e+00  2.78699479e+00  0.00000000e+00  3.31898599e+00\n",
+      " [ 4.23452956e-02  2.13176725e+01 -1.23483161e+01  1.30931513e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.75287125e+00  2.79338227e+00  0.00000000e+00  3.32804399e+00\n",
+      " [ 4.83647914e-02  2.13263868e+01 -1.23429610e+01  1.30998780e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.76189719e+00  2.80124005e+00  0.00000000e+00  3.33856981e+00\n",
+      " [ 5.43766814e-02  2.13352991e+01 -1.23378196e+01  1.31068028e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.77084106e+00  2.81055754e+00  0.00000000e+00  3.35055299e+00\n",
+      " [ 6.03809294e-02  2.13442124e+01 -1.23328918e+01  1.31139256e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.77969510e+00  2.82132473e+00 -7.89312850e-04  3.36398364e+00\n",
+      " [ 6.63775424e-02  2.13531169e+01 -1.23281777e+01  1.31212464e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.78845391e+00  2.83353392e+00 -3.22176221e-03  3.37885425e+00\n",
+      " [ 7.23665297e-02  2.13620125e+01 -1.23236771e+01  1.31287653e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.79711399e+00  2.84717923e+00 -7.29811234e-03  3.39515922e+00\n",
+      " [ 7.83479005e-02  2.13708993e+01 -1.23193901e+01  1.31364822e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.80566934e+00  2.86225228e+00 -1.30214002e-02  3.41315373e+00\n",
-      "   0.00000000e+00  1.39965112e-03  0.00000000e+00  1.44657618e-03\n",
-      "   5.90131644e-04  0.00000000e+00]\n",
-      " [ 3.08265673e+00  1.17818955e+01 -1.97373624e+01  1.80736280e+01\n",
+      " [ 8.43216696e-02  2.13797774e+01 -1.23152497e+01  1.31442434e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.08297454e+00  1.17818467e+01 -1.97298979e+01  1.80712329e+01\n",
+      " [ 9.02878650e-02  2.13886467e+01 -1.23111174e+01  1.31519960e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.08327757e+00  1.17817842e+01 -1.97224589e+01  1.80688264e+01\n",
+      " [ 9.62464962e-02  2.13975072e+01 -1.23069932e+01  1.31597400e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.08356600e+00  1.17817082e+01 -1.97150451e+01  1.80664088e+01\n",
+      " [ 1.02197573e-01  2.14063590e+01 -1.23028770e+01  1.31674754e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.08384003e+00  1.17816188e+01 -1.97076563e+01  1.80639802e+01\n",
+      " [ 1.08141103e-01  2.14152021e+01 -1.22987690e+01  1.31752022e+01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.08409933e+00  1.17815158e+01 -1.97002928e+01  1.80615403e+01\n",
-      "   6.69936491e-04  5.30212930e-05  8.34657276e-04 -6.31807927e-04\n",
-      "  -1.16216841e-04 -6.68625208e-05]]\n"
+      " [ 1.14077098e-01  2.14240365e+01 -1.22946690e+01  1.31829205e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 1.20005566e-01  2.14328621e+01 -1.22905770e+01  1.31906302e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]]\n"
      ]
     }
    ],
@@ -441,7 +463,7 @@
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
     "outcome_iid = _bed.iid\n",
-    "true_beta = np.array([12.,-15.,16.])\n",
+    "true_beta = np.array([42.,-25.,26.])\n",
     "\n",
     "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
     "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
@@ -452,6 +474,9 @@
     "\n",
     "for j in np.arange(3):\n",
     "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "    print(_bed.read(_np.s_[:,j], dtype=_np.float64).flatten())\n",
+    "\n",
+    "print(_bed.read(_np.s_[:,j], dtype=_np.int8).flatten().shape)\n",
     "\n",
     "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
     "\n",
@@ -463,11 +488,11 @@
     "                            fam_file=fam_file, \n",
     "                            outcome=outcome, \n",
     "                            outcome_iid=outcome_iid, \n",
-    "                            lambda_=np.linspace(.001,10,20)[::-1],\n",
-    "                            SNP_ind=np.arange(10), \n",
+    "                            lambda_=np.linspace(.00001,10,20)[::-1],\n",
+    "                            SNP_ind=np.arange(3), \n",
     "                            L_convex=L_convex, \n",
-    "                            beta_0 = np.ones(1),\n",
-    "                            tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
+    "                            beta_0 = np.ones(10),\n",
+    "                            tol=1e-2, maxit=500000, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
