--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-22T16:47:54.224156Z",
-     "start_time": "2022-07-22T16:47:51.924046Z"
+     "end_time": "2022-07-23T19:18:43.360721Z",
+     "start_time": "2022-07-23T19:18:42.999214Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alphaIto\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
       "  \"class\": algorithms.Blowfish,\n"
      ]
     }
@@ -60,8 +60,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-22T16:47:56.148636Z",
-     "start_time": "2022-07-22T16:47:54.226098Z"
+     "end_time": "2022-07-23T19:18:43.519443Z",
+     "start_time": "2022-07-23T19:18:43.362064Z"
     }
    },
    "outputs": [],
@@ -181,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-22T17:49:11.646066Z",
-     "start_time": "2022-07-22T17:49:11.606622Z"
+     "end_time": "2022-07-23T19:18:43.538262Z",
+     "start_time": "2022-07-23T19:18:43.520498Z"
     }
    },
    "outputs": [],
@@ -246,12 +246,12 @@
     "#     y_temp /= _np.std(y)\n",
     "    p=len(list(bed.sid))\n",
     "    grad_at_0 = _SNP_update_smooth_grad_convex_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=_np.zeros(p), y=y, outcome_iid=outcome_iid)\n",
-    "    return lambda_max\n",
+    "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_LM_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_UAG_LM_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-5, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for penalized LM for a fixed lambda.\n",
     "    '''\n",
@@ -265,7 +265,7 @@
     "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "        _y -= _np.mean(_y)\n",
     "        for j in SNP_ind:\n",
-    "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "            _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "            _X -= _np.mean(_X)\n",
     "            _[j] = _X@_y/N\n",
@@ -332,7 +332,7 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_LM(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_solution_path_LM(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-5, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -354,7 +354,6 @@
     "    beta = _#_np.sign(_)\n",
     "    beta = _np.hstack((np.array([0]), beta)).reshape(1,-1)\n",
     "    \n",
-    "        \n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    beta_mat = _np.repeat(beta, len(lambda_)+1, axis=0)\n",
     "    for j in range(len(lambda_)): \n",
@@ -372,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-22T18:02:23.385900Z",
-     "start_time": "2022-07-22T18:02:00.741691Z"
+     "end_time": "2022-07-23T19:23:27.744157Z",
+     "start_time": "2022-07-23T19:18:43.539700Z"
     }
    },
    "outputs": [
@@ -389,66 +388,66 @@
       "[1. 2. 0. ... 0. 2. 1.]\n",
       "[2. 1. 2. ... 2. 2. 2.]\n",
       "(5000,)\n",
-      "[[ 6.07135686e-03  2.12695484e+01 -1.23849299e+01  1.30569540e+01\n",
+      "[[ 1.67989907e+00  1.94302623e+00  0.00000000e+00  4.79107544e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.21354531e-02  2.12770734e+01 -1.23782941e+01  1.30624910e+01\n",
+      " [ 3.17419240e+00  1.30774576e+00  0.00000000e+00  7.24439125e-02\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.81922393e-02  2.12847967e+01 -1.23718716e+01  1.30682265e+01\n",
+      " [ 3.58781391e+00  1.05898494e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 2.42416659e-02  2.12927184e+01 -1.23656625e+01  1.30741603e+01\n",
+      " [ 3.84671713e+00  8.85856152e-01  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.02836837e-02  2.13008383e+01 -1.23596668e+01  1.30802924e+01\n",
+      " [ 3.67426618e+00  1.06324918e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.63182434e-02  2.13091563e+01 -1.23538847e+01  1.30866228e+01\n",
+      " [ 3.47025882e+00  1.26894431e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.23452956e-02  2.13176725e+01 -1.23483161e+01  1.30931513e+01\n",
+      " [ 3.35849994e+00  1.42462357e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.83647914e-02  2.13263868e+01 -1.23429610e+01  1.30998780e+01\n",
+      " [ 3.13240883e+00  1.80072789e+00 -9.85637811e-02  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 5.43766814e-02  2.13352991e+01 -1.23378196e+01  1.31068028e+01\n",
+      " [ 2.80400320e+00  2.35141960e+00 -3.59388173e-01  7.83434214e-02\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.03809294e-02  2.13442124e+01 -1.23328918e+01  1.31139256e+01\n",
+      " [ 2.35504142e+00  2.99383056e+00 -6.44074549e-01  2.10770378e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.63775424e-02  2.13531169e+01 -1.23281777e+01  1.31212464e+01\n",
+      " [ 1.27550769e+00  4.23486125e+00 -1.04223016e+00  4.31149227e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.23665297e-02  2.13620125e+01 -1.23236771e+01  1.31287653e+01\n",
+      " [ 1.04293878e+00  4.07441025e+00 -1.10742880e+00  8.31838811e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.83479005e-02  2.13708993e+01 -1.23193901e+01  1.31364822e+01\n",
+      " [ 9.19743111e-01  4.13538737e+00 -1.47135017e+00  1.23977521e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 8.43216696e-02  2.13797774e+01 -1.23152497e+01  1.31442434e+01\n",
+      " [ 8.27400845e-01  4.15213557e+00 -2.08850414e+00  1.92923311e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 9.02878650e-02  2.13886467e+01 -1.23111174e+01  1.31519960e+01\n",
+      " [ 7.32218195e-01  4.13636136e+00 -2.55293143e+00  2.50464375e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 9.62464962e-02  2.13975072e+01 -1.23069932e+01  1.31597400e+01\n",
+      " [ 7.32211647e-01  4.13636470e+00 -2.55293118e+00  2.50465098e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.02197573e-01  2.14063590e+01 -1.23028770e+01  1.31674754e+01\n",
+      " [ 7.32205098e-01  4.13636804e+00 -2.55293094e+00  2.50465821e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.08141103e-01  2.14152021e+01 -1.22987690e+01  1.31752022e+01\n",
+      " [ 7.32198549e-01  4.13637137e+00 -2.55293069e+00  2.50466544e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.14077098e-01  2.14240365e+01 -1.22946690e+01  1.31829205e+01\n",
+      " [ 7.32191997e-01  4.13637470e+00 -2.55293045e+00  2.50467267e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.20005566e-01  2.14328621e+01 -1.22905770e+01  1.31906302e+01\n",
-      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00]]\n"
+      " [ 7.32185448e-01  4.13637804e+00 -2.55293020e+00  2.50467989e+00\n",
+      "  -6.25096994e-06 -7.35579898e-06 -6.94739641e-06 -5.41054807e-06\n",
+      "  -6.52189501e-06 -6.74276702e-06]]\n"
      ]
     }
    ],
@@ -463,7 +462,7 @@
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
     "outcome_iid = _bed.iid\n",
-    "true_beta = np.array([42.,-25.,26.])\n",
+    "true_beta = np.array([4.2,-2.5,2.6])\n",
     "\n",
     "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
     "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
@@ -476,8 +475,6 @@
     "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "    print(_bed.read(_np.s_[:,j], dtype=_np.float64).flatten())\n",
     "\n",
-    "print(_bed.read(_np.s_[:,j], dtype=_np.int8).flatten().shape)\n",
-    "\n",
     "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
     "\n",
     "outcome = outcome[iid_ind]\n",
@@ -488,11 +485,11 @@
     "                            fam_file=fam_file, \n",
     "                            outcome=outcome, \n",
     "                            outcome_iid=outcome_iid, \n",
-    "                            lambda_=np.linspace(.00001,10,20)[::-1],\n",
-    "                            SNP_ind=np.arange(3), \n",
+    "                            lambda_=np.linspace(.00001,2,20)[::-1],\n",
+    "                            SNP_ind=np.arange(9), \n",
     "                            L_convex=L_convex, \n",
     "                            beta_0 = np.ones(10),\n",
-    "                            tol=1e-2, maxit=500000, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
+    "                            tol=1e-5, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
