--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:41:22.547624Z",
-     "start_time": "2022-07-21T23:41:22.080244Z"
+     "end_time": "2022-07-23T19:28:09.808093Z",
+     "start_time": "2022-07-23T19:28:09.433657Z"
     }
    },
    "outputs": [
@@ -61,8 +61,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:41:22.721985Z",
-     "start_time": "2022-07-21T23:41:22.548916Z"
+     "end_time": "2022-07-23T19:28:09.982841Z",
+     "start_time": "2022-07-23T19:28:09.809834Z"
     }
    },
    "outputs": [],
@@ -185,8 +185,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:41:22.742693Z",
-     "start_time": "2022-07-21T23:41:22.723038Z"
+     "end_time": "2022-07-23T19:28:10.002254Z",
+     "start_time": "2022-07-23T19:28:09.983857Z"
     }
    },
    "outputs": [],
@@ -247,12 +247,12 @@
     "#     y_temp /= _np.std(y)\n",
     "    p=len(list(bed.sid))\n",
     "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=_np.zeros(p), y=y, outcome_iid=outcome_iid)\n",
-    "    return lambda_max\n",
+    "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_logistic_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_UAG_logistic_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-5, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
@@ -264,9 +264,10 @@
     "    if _np.all(beta_0==_np.ones(1)):\n",
     "        _ = _np.zeros(p)\n",
     "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y = _y.astype(dtype=_np.float64)\n",
     "        _y -= _np.mean(_y)\n",
     "        for j in SNP_ind:\n",
-    "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "            _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "            _X -= _np.mean(_X)\n",
     "            _[j] = _X@_y/N\n",
@@ -333,13 +334,31 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_logistic(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_solution_path_logistic(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-5, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    p = bed.sid_count\n",
+    "    \n",
+    "    y = outcome\n",
+    "    gene_iid = _np.array(list(bed.iid))\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
+    "    _ = _np.zeros(p)\n",
+    "    _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    _y = _y.astype(dtype=_np.float64)\n",
+    "    _y -= _np.mean(_y)\n",
+    "    for j in SNP_ind:\n",
+    "        _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
+    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "        _X -= _np.mean(_X)\n",
+    "        _[j] = _X@_y/N\n",
+    "    beta = _#_np.sign(_)\n",
+    "    beta = _np.hstack((np.array([0]), beta)).reshape(1,-1)\n",
+    "    \n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
+    "    beta_mat = _np.repeat(beta, len(lambda_)+1, axis=0)\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -355,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:43:29.061703Z",
-     "start_time": "2022-07-21T23:43:27.499569Z"
+     "end_time": "2022-07-23T19:29:14.942344Z",
+     "start_time": "2022-07-23T19:28:10.003485Z"
     }
    },
    "outputs": [
@@ -367,67 +386,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L_convex is: 951.1723835414942\n",
-      "[[3.39674760e-04 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [6.79223625e-04 0.00000000e+00 0.00000000e+00 5.83270060e-06\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [1.01864247e-03 0.00000000e+00 0.00000000e+00 4.26284452e-05\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [1.35792015e-03 0.00000000e+00 0.00000000e+00 1.10370660e-04\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [1.69704385e-03 2.04021521e-05 0.00000000e+00 2.09041039e-04\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [2.03599407e-03 7.17175873e-05 0.00000000e+00 3.38614502e-04\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [2.37474834e-03 1.53917913e-04 0.00000000e+00 4.99062955e-04\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [2.71328397e-03 2.66974492e-04 0.00000000e+00 6.90358061e-04\n",
-      "  0.00000000e+00 2.31436869e-06 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [3.05157172e-03 4.10852084e-04 0.00000000e+00 9.12464953e-04\n",
-      "  0.00000000e+00 3.54687686e-05 0.00000000e+00 8.05949027e-06\n",
-      "  2.16507996e-06 0.00000000e+00]\n",
-      " [3.38955509e-03 5.85488078e-04 0.00000000e+00 1.16532181e-03\n",
-      "  1.08174652e-05 9.94003576e-05 1.37545540e-05 4.69068190e-05\n",
-      "  3.51198380e-05 2.11419939e-05]\n",
-      " [3.72714652e-03 7.90788796e-04 0.00000000e+00 1.44883677e-03\n",
-      "  5.23390760e-05 1.94014780e-04 5.82108368e-05 1.16450027e-04\n",
-      "  9.87715608e-05 7.29855288e-05]\n",
-      " [4.06424565e-03 1.02664767e-03 0.00000000e+00 1.76290568e-03\n",
-      "  1.24460243e-04 3.19204554e-04 1.33264216e-04 2.16584735e-04\n",
-      "  1.93014801e-04 1.55425994e-04]\n",
-      " [4.40075251e-03 1.29295852e-03 0.00000000e+00 2.10742479e-03\n",
-      "  2.27076771e-04 4.74862606e-04 2.38810455e-04 3.47206956e-04\n",
-      "  3.17744510e-04 2.68359177e-04]\n",
-      " [4.73656752e-03 1.58961559e-03 0.00000000e+00 2.48229075e-03\n",
-      "  3.60084863e-04 6.60882268e-04 3.74745714e-04 5.08213101e-04\n",
-      "  4.72856038e-04 4.11681258e-04]\n",
-      " [5.07159147e-03 1.91651353e-03 0.00000000e+00 2.88740057e-03\n",
-      "  5.23381116e-04 8.77157282e-04 5.40966548e-04 6.99499976e-04\n",
-      "  6.58245136e-04 5.85288817e-04]\n",
-      " [5.40572555e-03 2.27354736e-03 0.00000000e+00 3.32265169e-03\n",
-      "  7.16862522e-04 1.12358179e-03 7.37369912e-04 9.20964784e-04\n",
-      "  8.73807951e-04 7.89078826e-04]\n",
-      " [5.73887131e-03 2.66061255e-03 0.00000000e+00 3.78794194e-03\n",
-      "  9.40426471e-04 1.40005036e-03 9.63853154e-04 1.17250512e-03\n",
-      "  1.11944103e-03 1.02294866e-03]\n",
-      " [6.07093044e-03 3.07760470e-03 2.93165568e-06 4.28316928e-03\n",
-      "  1.19397050e-03 1.70645769e-03 1.22031376e-03 1.45401875e-03\n",
-      "  1.39504109e-03 1.28679584e-03]\n",
-      " [6.40180211e-03 3.52441702e-03 3.58348991e-05 4.80822917e-03\n",
-      "  1.47738960e-03 2.04269602e-03 1.50664662e-03 1.76540113e-03\n",
-      "  1.70050245e-03 1.58051549e-03]\n",
-      " [6.73137853e-03 4.00096557e-03 9.86313584e-05 5.36303968e-03\n",
-      "  1.79060133e-03 2.40868027e-03 1.82276901e-03 2.10657084e-03\n",
-      "  2.03574237e-03 1.90402562e-03]]\n"
+      "L_convex is: 9843.632966454592\n",
+      "[[ 2.59914940e-01  2.36211049e-01  0.00000000e+00  1.69344092e-01\n",
+      "   2.53467255e-02  1.72167494e-02  2.94032836e-02  3.05454383e-02\n",
+      "   3.01353887e-02  3.27042175e-02]\n",
+      " [ 5.07521539e-01  3.05213441e-01  0.00000000e+00  1.97468700e-01\n",
+      "   2.82695814e-03  8.32992061e-04  4.07356369e-03  4.53679157e-03\n",
+      "   4.44013015e-03  5.39025771e-03]\n",
+      " [ 5.07539148e-01  3.05216461e-01  0.00000000e+00  1.97468376e-01\n",
+      "   2.81890213e-03  8.24088197e-04  4.06574377e-03  4.52902212e-03\n",
+      "   4.43238868e-03  5.38267319e-03]\n",
+      " [ 5.07556757e-01  3.05220985e-01  0.00000000e+00  1.97469555e-01\n",
+      "   2.81234904e-03  8.16687267e-04  4.05942676e-03  4.52275557e-03\n",
+      "   4.42615013e-03  5.37659158e-03]\n",
+      " [ 5.07574367e-01  3.05227011e-01  0.00000000e+00  1.97472237e-01\n",
+      "   2.80729855e-03  8.10788931e-04  4.05461231e-03  4.51799160e-03\n",
+      "   4.42141415e-03  5.37201253e-03]\n",
+      " [ 5.07591976e-01  3.05234539e-01  0.00000000e+00  1.97476421e-01\n",
+      "   2.80375029e-03  8.06392843e-04  4.05130010e-03  4.51472985e-03\n",
+      "   4.41818040e-03  5.36893572e-03]\n",
+      " [ 5.07609586e-01  3.05243570e-01  0.00000000e+00  1.97482107e-01\n",
+      "   2.80170392e-03  8.03498664e-04  4.04948977e-03  4.51296999e-03\n",
+      "   4.41644854e-03  5.36736079e-03]\n",
+      " [ 5.07627194e-01  3.05254101e-01  0.00000000e+00  1.97489295e-01\n",
+      "   2.80115911e-03  8.02106049e-04  4.04918099e-03  4.51271167e-03\n",
+      "   4.41621822e-03  5.36728741e-03]\n",
+      " [ 5.07644802e-01  3.05266134e-01  0.00000000e+00  1.97497983e-01\n",
+      "   2.80211549e-03  8.02214657e-04  4.05037343e-03  4.51395455e-03\n",
+      "   4.41748909e-03  5.36871522e-03]\n",
+      " [ 5.07662409e-01  3.05279669e-01  0.00000000e+00  1.97508173e-01\n",
+      "   2.80457274e-03  8.03824145e-04  4.05306673e-03  4.51669828e-03\n",
+      "   4.42026082e-03  5.37164390e-03]\n",
+      " [ 5.07680014e-01  3.05294703e-01  0.00000000e+00  1.97519864e-01\n",
+      "   2.80853050e-03  8.06934172e-04  4.05726057e-03  4.52094253e-03\n",
+      "   4.42453306e-03  5.37607311e-03]\n",
+      " [ 5.07697617e-01  3.05311238e-01  0.00000000e+00  1.97533054e-01\n",
+      "   2.81398844e-03  8.11544396e-04  4.06295460e-03  4.52668695e-03\n",
+      "   4.43030547e-03  5.38200249e-03]\n",
+      " [ 5.07715218e-01  3.05329273e-01  0.00000000e+00  1.97547745e-01\n",
+      "   2.82094620e-03  8.17654474e-04  4.07014849e-03  4.53393120e-03\n",
+      "   4.43757770e-03  5.38943170e-03]\n",
+      " [ 6.47126373e-01  4.66544020e-01  0.00000000e+00  3.19120982e-01\n",
+      "   3.36105324e-02  2.25281358e-02  3.84282280e-02  3.87555235e-02\n",
+      "   3.87727831e-02  4.20099680e-02]\n",
+      " [ 6.47130220e-01  4.66551090e-01  0.00000000e+00  3.19124614e-01\n",
+      "   3.36064539e-02  2.25233903e-02  3.84245375e-02  3.87517278e-02\n",
+      "   3.87689772e-02  4.20064082e-02]\n",
+      " [ 6.47134068e-01  4.66559662e-01  0.00000000e+00  3.19129750e-01\n",
+      "   3.36038778e-02  2.25201473e-02  3.84223495e-02  3.87494345e-02\n",
+      "   3.87666737e-02  4.20043508e-02]\n",
+      " [ 6.47137915e-01  4.66569736e-01 -1.06913736e-06  3.19136387e-01\n",
+      "   3.36028040e-02  2.25184064e-02  3.84216637e-02  3.87486435e-02\n",
+      "   3.87658725e-02  4.20037956e-02]\n",
+      " [ 6.47141763e-01  4.66581312e-01 -3.64066513e-06  3.19144526e-01\n",
+      "   3.36032321e-02  2.25181676e-02  3.84224800e-02  3.87493545e-02\n",
+      "   3.87665733e-02  4.20047425e-02]\n",
+      " [ 6.47145610e-01  4.66594390e-01 -7.71476281e-06  3.19154168e-01\n",
+      "   3.36051622e-02  2.25194306e-02  3.84247981e-02  3.87515674e-02\n",
+      "   3.87687759e-02  4.20071912e-02]\n",
+      " [ 6.47149456e-01  4.66608960e-01 -1.32916098e-05  3.19165304e-01\n",
+      "   3.36085938e-02  2.25221953e-02  3.84286177e-02  3.87552818e-02\n",
+      "   3.87724802e-02  4.20111415e-02]]\n"
      ]
     }
    ],
@@ -442,7 +461,7 @@
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
     "outcome_iid = _bed.iid\n",
-    "true_beta = np.array([12.,-15.,16.])\n",
+    "true_beta = np.array([4.2,-2.5,2.6])\n",
     "\n",
     "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
     "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
@@ -466,11 +485,11 @@
     "                                fam_file=fam_file, \n",
     "                                outcome=outcome, \n",
     "                                outcome_iid=outcome_iid, \n",
-    "                                lambda_=np.linspace(.00001,.2,20)[::-1],\n",
-    "                                SNP_ind=np.arange(10), \n",
+    "                                lambda_=np.linspace(.00001,.1,20)[::-1],\n",
+    "                                SNP_ind=np.arange(9), \n",
     "                                L_convex=L_convex, \n",
     "                                beta_0 = np.ones(1),\n",
-    "                                tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
+    "                                tol=1e-5, maxit=500, penalty=\"SCAD\", a=10000, gamma=2.)[:,:10])\n"
    ]
   },
   {
