--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -260,12 +260,12 @@
     "#     y_temp -= _np.mean(y)\n",
     "#     y_temp /= _np.std(y)\n",
     "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=_np.zeros(len(SNP_ind)), y=y, outcome_iid=outcome_iid, chunck_size=chunck_size)\n",
-    "    return lambda_max\n",
+    "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_logistic_SCAD_MCP_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
+    "def SNP_UAG_logistic_SCAD_MCP_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = _np.ones(1), tol=1e-5, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
@@ -276,13 +276,14 @@
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if _np.all(beta_0==_np.ones(1)):\n",
     "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y = _y.astype(dtype=_np.float64)\n",
     "        _y -= _np.mean(_y)\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
     "            k=0\n",
     "            __ = _np.zeros(len(_ind))\n",
     "            for j in _ind:\n",
-    "                _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "                _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
     "                _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "                _X -= _np.mean(_X)\n",
     "                __[k] = _X@_y/N\n",
@@ -356,13 +357,41 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_logistic_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
+    "def SNP_solution_path_logistic_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = _np.ones(1), tol=1e-5, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    y = outcome\n",
     "    p = bed.sid_count\n",
+    "    gene_iid = _np.array(list(bed.iid))\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
+    "    _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    _y = _y.astype(dtype=_np.float64)\n",
+    "    _y -= _np.mean(_y)\n",
+    "    def __parallel_assign(_ind):\n",
+    "        import numpy as _np\n",
+    "        k=0\n",
+    "        __ = _np.zeros(len(_ind))\n",
+    "        for j in _ind:\n",
+    "            _X = bed.read(_np.s_[:,j], dtype=_np.float64).flatten()\n",
+    "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            _X -= _np.mean(_X)\n",
+    "            __[k] = _X@_y/N\n",
+    "            k += 1\n",
+    "        return __\n",
+    "    # multiprocessing starts here\n",
+    "    n_slices = _np.ceil(len(SNP_ind)/chunck_size)\n",
+    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
+    "    _XTy = _np.hstack(_XTy)\n",
+    "    beta = _np.zeros(p+1)\n",
+    "    beta[SNP_ind+1] = _XTy#_np.sign(_XTy)\n",
+    "    beta =beta.reshape(1,-1)\n",
+    "    \n",
     "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
+    "    beta_mat = _np.repeat(beta, len(lambda_)+1, axis=0)\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma, chunck_size=chunck_size)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -397,7 +426,7 @@
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
     "outcome_iid = _bed.iid\n",
-    "true_beta = np.array([12.,-15.,16.])\n",
+    "true_beta = np.array([4.2,-2.5,2.6])\n",
     "\n",
     "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
     "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
@@ -423,7 +452,7 @@
     "                                        SNP_ind=np.arange(10), \n",
     "                                        L_convex=L_convex, \n",
     "                                        beta_0 = np.ones(1),\n",
-    "                                        tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
+    "                                        tol=1e-5, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=1000)[:,:10])\n"
    ]
   },
   {
